Fix back arrow alignment

--- a/src/sentry/static/sentry/less/organization.less
+++ b/src/sentry/static/sentry/less/organization.less
@@ -789,8 +789,7 @@ table.project-list {
 
 .team-choices .team-slug {
   display: block;
-  font-style: italic;
-  font-weight: regular;
+  font-weight: normal;
   color: @gray-light;
 }
 
