--- a/src/sentry/static/sentry/less/project-settings.less
+++ b/src/sentry/static/sentry/less/project-settings.less
@@ -3,7 +3,7 @@
 * ============================================================================
 */
 
-.settings .sub-header {
+.settings .sub-header > div:first-child {
   padding-top: 20px;
 }
 
